# delivery

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
api/: application.py  ioc.py  middleware.py  settings.py
api/adapters/background_jobs/: assign_orders_job.py  move_couriers_job.py  scheduler.py
api/adapters/http/: delivery.py  health.py
api/adapters/http/contract/: .openapi-generator-ignore  models.py  openapi.yml
core/application/use_cases/commands/assign_order/: assign_order_handler.py  command.py  handler.py
core/application/use_cases/commands/create_order/: command.py  create_order_handler.py  handler.py
core/application/use_cases/commands/move_couriers/: command.py  handler.py  move_couriers_handler.py
core/application/use_cases/queries/get_busy_couriers/: get_busy_couriers_handler.py  get_busy_query_response.py  handler.py  query.py
core/application/use_cases/queries/get_incomplete_orders/: get_incomplete_orders_handler.py  handler.py  query.py  response.py
core/domain/model/courier_aggregate/: __init__.py  courier.py  courier_status.py  transport.py
core/domain/model/order_aggregate/: __init__.py  order.py  order_status.py
core/domain/model/shared_kernel/: __init__.py  location.py
core/domain/services/: __init__.py  dispatch_service.py  i_dispatch_service.py
core/ports/: i_courier_repository.py  i_order_repository.py
infrastructure/adapters/postgres/: connection.py  models.py  unit_of_work.py
infrastructure/adapters/postgres/migrations/: env.py
infrastructure/adapters/postgres/migrations/versions/: 2025-03-30T15_03_init_tables.py  2025-03-30_15:3:43_init_tables.py
infrastructure/adapters/postgres/repositories/: base.py  courier_repository.py  order_repository.py
tests/core/domain/model/courier_aggregate/: test_courier.py  test_transport.py
tests/core/domain/model/order_aggregate/: test_order.py
tests/core/domain/model/shared_kernel/: test_location.py
tests/core/domain/services/: test_dispatch_service.py
tests/integration_tests/: conftest.py
tests/integration_tests/repositories/: test_courier_repository.py  test_order_repository.py
tests/unit_tests/domain/model/courier_aggregate/: test_courier.py  test_transport.py
tests/unit_tests/domain/model/shared_kernel/: test_location.py
tests/unit_tests/domain/services/: test_dispatch_service.py
